# slacker

./: .TODO.kate-swp  .gitattributes  .gitignore  Cargo.toml  HOWTO.md  LICENSE  NEWS  README.md  TODO  doinst.sh  slack-desc  slacker.SlackBuild
DEV/: BARE_METAL_TESTS-after0.7.1.md  BUILD  BUILD-FREEZE.en.md  CODE_MAP.txt  Cargo.lock_soft.bak  README.credentials  README.md.BAK  Text File.txt  bump-version.sh  slacker_logo.nfo  slacker_logo.py  slacker_logo1.py  structure.md
DEV/4F/: CODE_MAP.txt  README.txt  msrv  structure.md
DEV/bakups/: CODE_MAP.txt  Cargo.toml  config.rs  download.rs  history.rs  main.rs  manifest.rs  pkg.rs  pkgdb.rs  repo.rs  system.rs  template.rs  ui.rs
DEV/bakups/N2Current/: CHANGES.txt
DEV/local_tools/: BUILD  BUILD-FREEZE.md  fix_AI_wiki.txt  notify.txt
examples/etc-slacker/: blacklist  mirrors  repos  slacker.conf
examples/etc-slacker/current/: .repos.kate-swp  mirrors  repos  slacker.conf
examples/etc-slacker/current/i686/: distro-upgrade.conf  mirrors  repos  slacker.conf
examples/etc-slacker/current/x86_64/: distro-upgrade.conf  mirrors  repos  slacker.conf
examples/etc-slacker/stable/: blacklist  mirrors  repos  slacker.conf
examples/etc-slacker/stable/i686/: mirrors  repos
examples/etc-slacker/stable/x86_64/: repos  slacker.conf
man/: slacker.8
src/: banner.rs  banner2.rs  changelog.rs  config.rs  credentials.rs  dist.rs  download.rs  gpg.rs  main.rs  manifest.rs  mirrors.rs  newconfig.rs  pkg.rs  pkgdb.rs  repo.rs  revert.rs  slackware.nfo  system.rs  ui.rs
wiki/: HOWTO-multilang.md  HOWTO.el.md  HOWTO.md  HOWTO_el.md  README.txt  blacklist-reference-multilang.md  blacklist-reference.el.md  blacklist-reference.md
