[package]
name = "slacker"
version = "0.1.0"
edition = "2021"
description = "A minimal Slackware package manager combining slackpkg + slackpkg+ semantics"

[[bin]]
name = "slacker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip"] }
native-tls = "0.2"
md-5 = "0.10"

[profile.release]
opt-level = 2
lto = true
strip = true
