[package]
name = "slacker"
version = "0.5.2"
edition = "2021"
description = "A minimal and fast Slackware package manager combining slackpkg + slackpkg+ semantics"
authors = ["Ioannis Anagnostakis (rizitis)"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["slackware", "package-manager", "slackpkg"]
categories = ["command-line-utilities"]

[[bin]]
name = "slacker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", default-features = false, features = ["native-tls", "gzip"] }
native-tls = "0.2"
md-5 = "0.10"
regex = "1"

[profile.release]
opt-level = 2
lto = true
strip = true
