[package]
name = "slacker"
version = "0.8.0"
edition = "2021"
description = "A minimal and fast Slackware package manager combining slackpkg + slackpkg+ semantics"
authors = ["Ioannis Anagnostakis (rizitis)"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["slackware", "package-manager", "slackpkg"]
categories = ["command-line-utilities"]
rust-version = "1.85.1"

[[bin]]
name = "slacker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
md-5 = "0.10"
regex = "1"

[profile.release]
opt-level = 2
lto = true
strip = true
